Fixed Search string is not visible on the search result page

--- a/css/sidebar.less
+++ b/css/sidebar.less
@@ -68,12 +68,6 @@
 }
 
 /* Forms */
-form.search.doku_form {
-    input[type="search"] {
-        color: @ini_background;
-    }
-}
-
 .widget-area,
 .search-form {
     button,
@@ -125,6 +119,11 @@ form.search.doku_form {
     }
     :-ms-input-placeholder {
        color: @ini_background;
+    }
+}
+form.search.doku_form {
+    input[type="text"] {
+        color: @ini_background;
     }
 }
 
